@@ -1,7 +1,7 @@
 <li i18n:domain="zeit.cms">
   <a title="Title"
     tal:attributes="
-    href string:${context/@@absolute_url}/${view/action};
+    href view/get_url;
     title view/title"
     i18n:attributes="title">
     <img tal:attributes="src view/icon" />
