@@ -8,6 +8,8 @@ zeit.cms changes
   eingeklappt ist (Bug #4388).
 - Suche: Der Dateiname wird jetzt angezeigt (Bug #4440).
 - Sperren: Es wird wieder angezeigt wer ein Objekt gesperrt hat.
+- Bei ausgecheckten Dokumenten gibt es jetzt eine Aktion um zu dem Original in
+  der Dateiverwaltung zu kommen (Bug #4419).
 
 1.9.1 (2009-01-21)
 ------------------
